# Job-App-Assistant

./: .gitignore  DEPLOYMENT.md  README.md  SETUP.md  package.json  turbo.json
.github/workflows/: api-ci.yml  frontend-ci.yml  worker-ci.yml
apps/api/: Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py
apps/api/app/middleware/: auth.py
apps/api/app/routers/: auth.py  cover_letter.py  health.py  jobs.py  outreach.py  resume.py
apps/api/app/services/: cover_letter_generator.py  dm_generator.py  jd_analyzer.py  latex_parser.py  storage.py  types.py
apps/api/app/tasks/: compile.py
apps/frontend/: next.config.js  package.json
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: layout.tsx  page.tsx  route.ts
apps/frontend/src/app/auth/callback/: route.ts
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/dashboard/jobs/[id]/: page.tsx
apps/frontend/src/app/dashboard/resume/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/lib/: api.ts  supabase.ts
apps/worker/: Dockerfile  README.md  fly.toml  pyproject.toml
apps/worker/worker/: __init__.py  config.py  database.py  main.py  models.py
apps/worker/worker/tasks/: __init__.py  compile.py
infra/supabase/: schema.sql
