[tool.poetry]
name = "get-a-job-worker"
version = "1.0.0"
description = "Celery worker for PDF compilation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
sentry-sdk = "^1.40.0"
pydantic-settings = "^2.1.0"
supabase = "^2.3.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
black = "^24.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

